<resources>
    <string name="app_name">PWL</string>


    <string name="teachers">Teachers</string>
    <string name="courses">Training Courses</string>
    <string name="workshops">Workshops</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="students">Students</string>
    <string name="activities">Activities</string>
    <string name="expenses">Expenses</string>
    <string name="revenues">Revenues</string>
    <string name="total_ammount">Total ammount</string>
    <string name="marketers">Marketers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="teacher_name">Teacher name</string>
    <string name="email">e-mail</string>
    <string name="specialty">Specialty</string>
    <string name="mobile">Mobile number</string>
    <string name="city">City</string>
    <string name="zone">Neighborhood</string>
    <string name="certificates">Certificates</string>
    <string name="experience">Experience</string>
    <string name="add_teacher">Add teacher</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter teacher name</string>
    <string name="enter_specialty">Enter teacher specialty</string>
    <string name="update_name">Update name</string>
    <string name="update_specialty">Update specialty</string>
    <string name="update_teacher">Update teacher</string>
    <string name="print">Print</string>
    <string name="delete_teacher">Delete teacher</string>
    <string name="course_name">Course name</string>
    <string name="add_course">Add course</string>
    <string name="start_course">Start course</string>
    <string name="end_course">End course</string>
    <string name="update_course">Update course</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_work_shop">Add workshop</string>
    <string name="workshop_title">Workshop title</string>
    <string name="workshop_costs">Workshop costs</string>
    <string name="add_student">Add student</string>
    <string name="student_name">Student name</string>
    <string name="marketer_name">Marketer name</string>
    <string name="add_marketer">Add marketer</string>
    <string name="activites_title">Activites title</string>
    <string name="activites_costs">Activites costs</string>
    <string name="inpartnership">In Partnership</string>
    <string name="add_activites">Add activites</string>
    <string name="activites_date">activites date</string>
    <string name="revenue">Revenue</string>
    <string name="revenue_costs">Revenue costs</string>
    <string name="expenses_name">Expenses name</string>
    <string name="expenses_costs">Expenses costs</string>
    <string name="add_revenue">Add revenue</string>
    <string name="settings">Settings</string>
    <string name="username">usernam</string>
    <string name="password">password</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="revenue_name">Revenue Name</string>
    <string name="delete_revenue">Delete</string>
    <string name="delete_student">delete Student</string>
    <string name="activity_date">Activity Date</string>
    <string name="user_type">User Type</string>
    <string name="log_out">Log Out</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_log_out">Are you sure log out</string>
    <string name="cancel">Cancel</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="about">About</string>
    <string name="add_user">Add user</string>
    <string name="enter_User_name">Enter your name</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="update_user_type">Update user type</string>
    <string name="please_select_user_type">Please select user type</string>
    <string name="admin">Admin</string>
    <string name="employee">Employee</string>
    <string name="update_name_success">Update name success</string>
    <string name="update_user_type_success">Update user type success</string>
    <string name="add_new_user">Add new user</string>
    <string name="add_new_user_success">Add new user success</string>

</resources>
