<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_teachers"
        android:icon="@drawable/ic_teacher"
        android:title="@string/teachers"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_course"
        android:title="@string/courses"
        app:showAsAction="always" />


    <item
        android:id="@+id/nav_workshops"
        android:icon="@drawable/ic_workshop"
        android:title="@string/workshops"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_students"
        android:icon="@drawable/ic_student"
        android:title="@string/students"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_marketers"
        android:icon="@drawable/ic_marketer"
        android:title="@string/marketers"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_activities"
        android:icon="@drawable/ic_activites"
        android:title="@string/activities"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_revenues"
        android:icon="@drawable/ic_revenue"
        android:title="@string/revenues"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>