<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/input_teacher_language_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/teacher_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_specialty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_name">

            <EditText
                android:id="@+id/input_teacher_language_specialty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/specialty"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_specialty">

            <EditText
                android:id="@+id/input_teacher_language_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_email">

            <EditText
                android:id="@+id/input_teacher_language_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/layout_input_teacher_language_zone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_mobile">

            <EditText
                android:id="@+id/input_teacher_language_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/city"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_zone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_input_teacher_language_city"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_mobile">

            <EditText
                android:id="@+id/input_teacher_language_zone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/zone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_certificates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_city">

            <EditText
                android:id="@+id/input_teacher_language_certificates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/certificates"
                android:inputType="textImeMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_teacher_language_experience"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_certificates">

            <EditText
                android:id="@+id/input_teacher_language_experience"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/experience"
                android:inputType="textImeMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add_teacher_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/add_teacher"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/layout_input_teacher_language_experience"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>