<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin10">


    <TextView
        android:id="@+id/text_update_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorButton"
        android:textSize="@dimen/textCardSize24"
        android:layout_margin="@dimen/margin12"
        android:padding="@dimen/margin8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_update_salon_name"
        android:layout_width="@dimen/widthheight"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_update_name">

        <EditText
            android:id="@+id/input_update_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_User_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update_name"
        android:layout_width="@dimen/widthheight"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_bg"
        android:padding="14dp"
        android:text="@string/update_name"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="@dimen/margin16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_update_salon_name" />

</androidx.constraintlayout.widget.ConstraintLayout>